--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="about-wrapper">
                 <div class="about-me">
                     <h4>More About Me</h4>
-                    <p>Hey, I am a Tech enthusiast and avid learner. I am learning Web development, machine learning and DSA and how to be a great Mamu. </p>
+                    <p>Hey, I am a Tech enthusiast and avid learner. I am learning Web development, machine learning, DSA and how to be a great Mamu. </p>
                     <p>Welcome to my journey, Lets connect and learn together.</p>
                 
 
@@ -130,7 +130,7 @@
             <form id="contact-form" >
                 <label >Name</label>
                 <input class="input-field" type="text" name="name" >
-                <label >subjet</label>
+                <label >subject</label>
                 <input class="input-field" type="text" name="subject" >
                 <label >Email</label>
                 <input class="input-field" type="text" name="Email" >
